codegen/ui_tests/export_fn_cfg.stderr
error: `cfg` attributes are not allowed for `export_fn`
  --> ui_tests/export_fn_cfg.rs:10:1
   |
10 | #[cfg(not(feature = "foo"))]
   | ^

warning: unexpected `cfg` condition value: `foo`
  --> ui_tests/export_fn_cfg.rs:10:11
   |
10 | #[cfg(not(feature = "foo"))]
   |           ^^^^^^^^^^^^^^^
   |
   = note: expected values for `feature` are: `default` and `metadata`
   = help: consider adding `foo` as a feature in `Cargo.toml`
   = note: see <https://doc.rust-lang.org/nightly/rustc/check-cfg/cargo-specifics.html> for more information about checking conditional configuration
   = note: `#[warn(unexpected_cfgs)]` on by default

error[E0425]: cannot find function `test_fn` in this scope
  --> ui_tests/export_fn_cfg.rs:18:8
   |
18 |     if test_fn(n) {
   |        ^^^^^^^ not found in this scope
